tests/error/ptr_assign_invalid.gw
class C {}

class D extends C {}

var D d;
d :=> var Ptr:[int] pd;
